src/snapshots/csvs_convert__converters__tests__add_field_zip.snap
---
source: src/lib.rs
assertion_line: 196
expression: "merge_datapackage_json(vec![format! (\"fixtures/{datapackage1}.zip\"), format!\n                            (\"fixtures/{datapackage2}.zip\")]).unwrap()"
---
profile: tabular-data-package
resources:
  - profile: tabular-data-resource
    name: games
    schema:
      fields:
        - name: id
          type: number
          count: 4
        - name: title
          type: string
          count: 2
        - name: title2
          type: string
          count: 2
      primaryKey: _link
    path: csv/games.csv

