src/snapshots/csvs_convert__converters__tests__base_zip_games.csv.snap
---
source: src/lib.rs
assertion_line: 310
expression: lines
---
- "id,title"
- "1,game1_base"
- "2,game2_base"
- "1,game1_base"
- "2,game2_base"

