src/snapshots/csvs_convert__converters__tests__csvs_db_no_conn.snap
---
source: src/converters.rs
assertion_line: 2676
expression: lines
---
- "CREATE TABLE IF NOT EXISTS \"all_types_semi_colon\" ( \"string\" TEXT "
- " , \"array\" JSONB "
- " , \"object\" JSONB "
- " , \"date\" TIMESTAMP "
- " , \"datetime\" TIMESTAMP "
- " , \"time\" TEXT "
- " , \"boolean\" BOOL "
- " , \"number\" NUMERIC "
- " , \"integer\" BIGINT "
- "); "
- ""
- "\\copy \"all_types_semi_colon\"(\"string\", \"array\", \"object\", \"date\", \"datetime\", \"time\", \"boolean\", \"number\", \"integer\") from '/Users/joelnatividad/GitHub/csvs_convert/src/fixtures/all_types_semi_colon.csv' WITH (FORMAT CSV, HEADER, QUOTE '\"', DELIMITER ';', FORCE_NULL (\"string\", \"array\", \"object\", \"date\", \"datetime\", \"time\", \"boolean\", \"number\", \"integer\"))"
- "CREATE TABLE IF NOT EXISTS \"all_types\" ( \"string\" TEXT "
- " , \"array\" JSONB "
- " , \"object\" JSONB "
- " , \"date\" TIMESTAMP "
- " , \"datetime\" TIMESTAMP "
- " , \"time\" TEXT "
- " , \"boolean\" BOOL "
- " , \"number\" NUMERIC "
- " , \"integer\" BIGINT "
- "); "
- ""
- "\\copy \"all_types\"(\"string\", \"array\", \"object\", \"date\", \"datetime\", \"time\", \"boolean\", \"number\", \"integer\") from '/Users/joelnatividad/GitHub/csvs_convert/src/fixtures/all_types.csv' WITH (FORMAT CSV, HEADER, QUOTE '\"', DELIMITER ',', FORCE_NULL (\"string\", \"array\", \"object\", \"date\", \"datetime\", \"time\", \"boolean\", \"number\", \"integer\"))"
