src/snapshots/csvs_convert__converters__tests__csvs_to_sqlite-3.snap
---
source: src/lib.rs
expression: datapackage
---
profile: tabular-data-package
resources:
  - profile: tabular-data-resource
    name: games
    row_count: 2
    schema:
      fields:
        - name: id
          type: integer
          format: integer
          stats:
            min_len: 1
            max_len: 1
            min_str: "1"
            max_str: "2"
            count: 2
            empty_count: 0
            exact_unique: 2
            estimate_unique: ~
            top_20:
              - - "1"
                - 1
              - - "2"
                - 1
            sum: 3
            mean: 1.5
            variance: 0.25
            stddev: 0.5
            min_number: 1
            max_number: 2
            median: 1.5
            lower_quartile: 1
            upper_quartile: 2
            deciles:
              - 1
              - 1
              - 1.1
              - 1.3
              - 1.5
              - 1.7000000000000002
              - 1.9000000000000001
              - 2
              - 2
            centiles:
              - 1
              - 1
              - 1
              - 1
              - 1
              - 1
              - 1
              - 1
              - 1
              - 1
              - 1
              - 1
              - 1
              - 1
              - 1
              - 1
              - 1
              - 1
              - 1
              - 1
              - 1
              - 1
              - 1
              - 1
              - 1
              - 1.02
              - 1.04
              - 1.06
              - 1.08
              - 1.1
              - 1.12
              - 1.1400000000000001
              - 1.1600000000000001
              - 1.1800000000000002
              - 1.2000000000000002
              - 1.22
              - 1.24
              - 1.26
              - 1.28
              - 1.3
              - 1.32
              - 1.3399999999999999
              - 1.3599999999999999
              - 1.38
              - 1.4
              - 1.42
              - 1.44
              - 1.46
              - 1.48
              - 1.5
              - 1.52
              - 1.54
              - 1.56
              - 1.58
              - 1.6
              - 1.62
              - 1.6400000000000001
              - 1.66
              - 1.68
              - 1.7
              - 1.72
              - 1.74
              - 1.76
              - 1.78
              - 1.8
              - 1.82
              - 1.84
              - 1.86
              - 1.8800000000000001
              - 1.9000000000000001
              - 1.92
              - 1.94
              - 1.96
              - 1.98
              - 2
              - 2
              - 2
              - 2
              - 2
              - 2
              - 2
              - 2
              - 2
              - 2
              - 2
              - 2
              - 2
              - 2
              - 2
              - 2
              - 2
              - 2
              - 2
              - 2
              - 2
              - 2
              - 2
              - 2
              - 2
        - name: title
          type: string
          format: string
          stats:
            min_len: 18
            max_len: 18
            min_str: game1_add_resource
            max_str: game2_add_resource
            count: 2
            empty_count: 0
            exact_unique: 2
            estimate_unique: ~
            top_20:
              - - game1_add_resource
                - 1
              - - game2_add_resource
                - 1
            sum: ~
            mean: ~
            variance: ~
            stddev: ~
            min_number: ~
            max_number: ~
            median: ~
            lower_quartile: ~
            upper_quartile: ~
            deciles: ~
            centiles: ~
    path: fixtures/add_resource/csv/games.csv
    dialect:
      delimiter: ","
      quoteChar: "\""
  - profile: tabular-data-resource
    name: games2
    row_count: 2
    schema:
      fields:
        - name: id
          type: integer
          format: integer
          stats:
            min_len: 1
            max_len: 1
            min_str: "1"
            max_str: "2"
            count: 2
            empty_count: 0
            exact_unique: 2
            estimate_unique: ~
            top_20:
              - - "1"
                - 1
              - - "2"
                - 1
            sum: 3
            mean: 1.5
            variance: 0.25
            stddev: 0.5
            min_number: 1
            max_number: 2
            median: 1.5
            lower_quartile: 1
            upper_quartile: 2
            deciles:
              - 1
              - 1
              - 1.1
              - 1.3
              - 1.5
              - 1.7000000000000002
              - 1.9000000000000001
              - 2
              - 2
            centiles:
              - 1
              - 1
              - 1
              - 1
              - 1
              - 1
              - 1
              - 1
              - 1
              - 1
              - 1
              - 1
              - 1
              - 1
              - 1
              - 1
              - 1
              - 1
              - 1
              - 1
              - 1
              - 1
              - 1
              - 1
              - 1
              - 1.02
              - 1.04
              - 1.06
              - 1.08
              - 1.1
              - 1.12
              - 1.1400000000000001
              - 1.1600000000000001
              - 1.1800000000000002
              - 1.2000000000000002
              - 1.22
              - 1.24
              - 1.26
              - 1.28
              - 1.3
              - 1.32
              - 1.3399999999999999
              - 1.3599999999999999
              - 1.38
              - 1.4
              - 1.42
              - 1.44
              - 1.46
              - 1.48
              - 1.5
              - 1.52
              - 1.54
              - 1.56
              - 1.58
              - 1.6
              - 1.62
              - 1.6400000000000001
              - 1.66
              - 1.68
              - 1.7
              - 1.72
              - 1.74
              - 1.76
              - 1.78
              - 1.8
              - 1.82
              - 1.84
              - 1.86
              - 1.8800000000000001
              - 1.9000000000000001
              - 1.92
              - 1.94
              - 1.96
              - 1.98
              - 2
              - 2
              - 2
              - 2
              - 2
              - 2
              - 2
              - 2
              - 2
              - 2
              - 2
              - 2
              - 2
              - 2
              - 2
              - 2
              - 2
              - 2
              - 2
              - 2
              - 2
              - 2
              - 2
              - 2
              - 2
        - name: title
          type: string
          format: string
          stats:
            min_len: 18
            max_len: 18
            min_str: game1_add_resource
            max_str: game2_add_resource
            count: 2
            empty_count: 0
            exact_unique: 2
            estimate_unique: ~
            top_20:
              - - game1_add_resource
                - 1
              - - game2_add_resource
                - 1
            sum: ~
            mean: ~
            variance: ~
            stddev: ~
            min_number: ~
            max_number: ~
            median: ~
            lower_quartile: ~
            upper_quartile: ~
            deciles: ~
            centiles: ~
    path: fixtures/add_resource/csv/games2.csv
    dialect:
      delimiter: ","
      quoteChar: "\""

