src/snapshots/csvs_convert__converters__tests__evolve_postgres-2.snap
---
source: src/lib.rs
expression: name_type
---
- string-text
- date-timestamp
- number-numeric
- boolean-bool

