src/snapshots/csvs_convert__converters__tests__evolve_sqlite-3.snap
---
source: src/lib.rs
expression: output
---
- - a string
  - 2005-02-01
  - "42"
  - "true"
  - "Null"
  - "Null"
  - "Null"
  - "Null"
- - a string
  - 2005-02-01
  - "42"
  - "true"
  - "Null"
  - "Null"
  - "Null"
  - "Null"
- - an string
  - "Null"
  - "Null"
  - "Null"
  - string2
  - 2005-02-01
  - "42"
  - "false"

