src/snapshots/csvs_convert__converters__tests__parquet.snap
---
source: src/converters.rs
expression: data
snapshot_kind: text
---
- - id
  - "1.0"
- - title
  - game1_add_resource
- - id
  - "2.0"
- - title
  - game2_add_resource
