src/snapshots/csvs_convert__converters__tests__parquet_auto-2.snap
---
source: src/converters.rs
expression: results
---
[
    [
        BigInt(
            1,
        ),
        Text(
            "game1_add_resource",
        ),
    ],
    [
        BigInt(
            2,
        ),
        Text(
            "game2_add_resource",
        ),
    ],
]
