src/snapshots/csvs_convert__converters__tests__parquet_auto.snap
---
source: src/converters.rs
expression: datapackage
---
profile: tabular-data-package
resources:
  - profile: tabular-data-resource
    name: games
    schema:
      fields:
        - name: id
          type: integer
          format: ""
        - name: title
          type: string
          format: ""
  - profile: tabular-data-resource
    name: games2
    schema:
      fields:
        - name: id
          type: integer
          format: ""
        - name: title
          type: string
          format: ""

